--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
             <div ng-view>
 
             </div>
-            <!-- <app-root></app-root> -->
+            <app-root></app-root>
 
 		</div>
 
