--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en-us" ng-app="weatherApp">
+<!-- <html lang="en-us" ng-app="weatherApp"> -->
+<html lang="en-us">
     <head>
         <title>AngularJS Weather Forecast SPA</title>
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -35,9 +36,7 @@
 
         <div class="container">
 
-            <div ng-view>
-
-            </div>
+            <div ng-view></div>
             <app-root></app-root>
 
 		</div>
