--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us" ng-app="weatherApp">
+<html lang="en-us">
 <!-- <html lang="en-us"> -->
     <head>
         <title>AngularJS Weather Forecast SPA</title>
